@@ -23,23 +23,23 @@
 #define GIMP_IMAGE_COLORMAP_SIZE 768
 
 
-guchar * gimp_image_get_colormap       (const GimpImage *gimage);
-gint     gimp_image_get_colormap_size  (const GimpImage *gimage);
-void     gimp_image_set_colormap       (GimpImage       *gimage,
-                                        const guchar    *cmap,
-                                        gint             n_colors,
-                                        gboolean         push_undo);
+const guchar * gimp_image_get_colormap       (const GimpImage *gimage);
+gint           gimp_image_get_colormap_size  (const GimpImage *gimage);
+void           gimp_image_set_colormap       (GimpImage       *gimage,
+                                              const guchar    *cmap,
+                                              gint             n_colors,
+                                              gboolean         push_undo);
 
-void     gimp_image_get_colormap_entry (GimpImage       *gimage,
-                                        gint             color_index,
-                                        GimpRGB         *color);
-void     gimp_image_set_colormap_entry (GimpImage       *gimage,
-                                        gint             color_index,
-                                        const GimpRGB   *color,
-                                        gboolean         push_undo);
+void           gimp_image_get_colormap_entry (GimpImage       *gimage,
+                                              gint             color_index,
+                                              GimpRGB         *color);
+void           gimp_image_set_colormap_entry (GimpImage       *gimage,
+                                              gint             color_index,
+                                              const GimpRGB   *color,
+                                              gboolean         push_undo);
 
-void     gimp_image_add_colormap_entry (GimpImage       *gimage,
-                                        const GimpRGB   *color);
+void           gimp_image_add_colormap_entry (GimpImage       *gimage,
+                                              const GimpRGB   *color);
 
 
 #endif /* __GIMP_IMAGE_COLORMAP_H__ */
